--- a/index.html
+++ b/index.html
@@ -7,15 +7,19 @@
     <title>My Resume</title>
   </head>
   <body>
-    <img
+    <div class="header"><img
       src="./Profile.jpg"
-      alt="profile image of ronald Wilson"
-      height="100"
-      class="center"
-    />
+      alt="profile image of ronald Wilson"/>
    
-    <h1 class="center">Ronald Wilson</h1>
-    <h5 class="center">Phone no: +919100952522 | Email ID: ronaldwilson000@outlook.com</h5>
+    <h1 class="info">Ronald Wilson</h1>
+    <h5 class="info">Phone no: +919100952522</h5>
+    <h5>Email ID: ronaldwilson000@outlook.com</h5>
+    <a href="https://www.linkedin.com/in/ronald-wilson-601377b6"></a> <img src="./linkedin.png" height="50" width="20" class="links"/></a>
+   
+
+  </div>
+    
+    <div>
     <h2>
       Summary</h2>
       I am a hardworking and dedicated Fullstack web developer who specialises in Frontend/UI development with 4+ years of professional experience in web designing and web development. 
@@ -60,6 +64,7 @@
     
     <hr />
 
+    <div class="experience">
     <h2>Work Experience</h2>
     <ul>
       <li>
@@ -120,10 +125,7 @@
         Used Excel Builder 3rd Party open-source library and tweak it to make
         sure it will work with IE11
       </ul>
-      <ul>
-        Used flickity.js for creating carousel-images
-      </ul>
-      <ul>
+      <ul>Used flickity.js for creating carousel-images</ul><ul>
         Component for UX-Library consisted of Button, Checkbox, Input, Icons,
         Toggle Button, Dropdown, Multi-Level Dropdown and many more
       </ul>
@@ -279,6 +281,7 @@
       <ul>Designed the optimized screens for service agents to manage the social media, digital media and case activities.
 
 <h4>Environment:</h4> <p>HTML, CSS, JavaScript, DHTML, XHMTL, Bootstrap, React.JS, Redux, JQuery and Windows.</p></ul>
+
 
 <hr />
 <h2>Skills</h2>
