--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <h1 class="info">Ronald Wilson</h1>
     <h5 class="info">Phone no: +919100952522</h5>
     <h5>Email ID: ronaldwilson000@outlook.com</h5>
-    <a href="https://www.linkedin.com/in/ronald-wilson-601377b6"></a> <img src="./linkedin.png" height="50" width="20" class="links"/></a>
+    <a href="https://www.linkedin.com/in/ronald-wilson-601377b6">
+      <img src="./linkedin.png" height="50" width="20" class="img-links" alt="LinkedIn Profile"/>
+    </a>
    
 
   </div>
